# rust_612

./: .gitignore
ini-proc/: .rustc_info.json  Cargo.toml  build.sh  conf.ini  mc6357.ini
ini-proc/.cargo/: config.toml
ini-proc/debug/.fingerprint/cfg-if-281312080690f83c/: lib-cfg_if  lib-cfg_if.json
ini-proc/debug/.fingerprint/cfg_aliases-91f1cb86832ce8fa/: lib-cfg_aliases  lib-cfg_aliases.json
ini-proc/debug/.fingerprint/const-random-macro-4897c2c2093b5085/: lib-const_random_macro  lib-const_random_macro.json
ini-proc/debug/.fingerprint/crunchy-506ebed4a18dbc0d/: dep-lib-crunchy  lib-crunchy  lib-crunchy.json
ini-proc/debug/.fingerprint/crunchy-f27cc46b60032cfe/: run-build-script-build-script-build  run-build-script-build-script-build.json
ini-proc/debug/.fingerprint/crunchy-fe26c4c73ac98071/: build-script-build-script-build  build-script-build-script-build.json
ini-proc/debug/.fingerprint/getrandom-24778096ae1979cd/: lib-getrandom  lib-getrandom.json
ini-proc/debug/.fingerprint/libc-16bb641dc3122be9/: run-build-script-build-script-build  run-build-script-build-script-build.json
ini-proc/debug/.fingerprint/libc-3b9a1748cb1e9a33/: lib-libc  lib-libc.json
ini-proc/debug/.fingerprint/libc-6bd205a603eaa535/: build-script-build-script-build  build-script-build-script-build.json
ini-proc/debug/.fingerprint/once_cell-929ea4b95e552dc8/: lib-once_cell  (+1 more)
ini-proc/src/: common.rs  main.rs
ini-proc/src/communication/: mod.rs  protocol.rs  tcp_transport.rs  types.rs
ini-proc/src/config/: ini_parse.rs  mod.rs
ini-proc/src/storage/: emmc.rs  mod.rs
(+14 files in other folders)
